# regime-bench

./: .gitignore  DATA.md  LICENSE  README.md  RELEASE.md  pyproject.toml  release_manifest.json
.github/workflows/: ci.yml
docs/: reference_outputs.md  release_policy.md  scoring.md  splits.md  task_interface.md
examples/: simple_momentum.py
reference_outputs/: synthetic_smoke_expected.json
regimebench/: __init__.py  split_engine.py
reports/regimebench-2026/: report.md  report.tex
runner/: run_task.py
scripts/: data_bundle.py  materialize_splits.py  reference_smoke.py
split_profiles/: report.toml
task_configs/: signal_shared.py
task_configs/signal-beta/: config.toml
task_configs/signal-cnn-volume/: config.toml
task_configs/signal-defillama/: config.toml
task_configs/signal-funding/: config.toml
task_configs/signal-intraday-seasonality/: config.toml
task_configs/signal-lottery/: config.toml
task_configs/signal-mean-reversion/: config.toml
task_configs/signal-ml/: config.toml
task_configs/signal-momentum-conditioned/: config.toml
task_configs/signal-pair-cluster/: config.toml
task_configs/signal-regime-conditioning/: config.toml
task_configs/signal-top-trader/: config.toml
task_configs/signal-upbit/: config.toml
task_configs/signal-volatility/: config.toml
task_configs/signal-volume/: config.toml
task_configs/signal-volume-price-corr/: config.toml
task_configs/signal-volume-time/: config.toml
tests/: test_regimebench_release.py
verifier/: __init__.py  pnl_engine.py  pnl_verifier.py  repair_verifier.py
(+142 files in other folders)
